--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "pad",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple padding library.",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "dependencies": {
-    "chai": "^3.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -17,7 +16,7 @@
     "mocha": "^3.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha tests"
   },
   "repository": {
     "type": "git",
