--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mocha": "^3.2.0"
   },
   "scripts": {
-    "test": "mocha tests"
+    "test": "node_modules/.bin/mocha tests"
   },
   "repository": {
     "type": "git",
